added the test for userService